--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,4 +1,7 @@
 footer {
-    background: black;
-    color: magenta
+    background-color: black;
+    color: magenta;
+    padding: 10px 0px 0px 10px;
+    margin: auto;
+    
 }
