--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,6 +4,7 @@
 
 .navbar-toggler {
     background-color: cornflowerblue;
+    color: lightgreen;
 }
 
 .navbar-brand {
